gcc/testsuite/rust/rustc/ui/parser/lex-bad-char-literals-5.rs
static c: char = '\x10\x10';
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {
    let ch: &str = '\x10\x10';
// { dg-error "" "" { target *-*-* } .-1 }
}

